@@ -2,7 +2,7 @@
 # Synchronizer settings
 #
 Sync {
-	Mode PERSISTENT {
+	Mode ALARM {
 		#
 		# If a conntrack entry is not modified in <= 15 seconds, then
 		# a message is broadcasted. This mechanism is used to
@@ -36,7 +36,7 @@ Sync {
 	#
 	Multicast {
 		IPv4_address 225.0.0.50
-		IPv4_interface 192.168.100.100 # IP of dedicated link
+		IPv4_interface 192.168.100.200 # IP of dedicated link
 		Interface eth2
 		Group 3780
 	}
@@ -121,11 +121,11 @@ General {
 #
 IgnoreTrafficFor {
 	IPv4_address 127.0.0.1 # loopback
-	IPv4_address 192.168.0.1
-	IPv4_address 192.168.1.1
-	IPv4_address 192.168.100.100 # dedicated link ip
-	IPv4_address 192.168.0.100 # virtual IP 1
-	IPv4_address 192.168.1.100 # virtual IP 2
+	IPv4_address 192.168.0.2
+	IPv4_address 192.168.1.2
+	IPv4_address 192.168.100.200 # dedicated link ip
+	IPv4_address 192.168.0.200 # virtual IP 1
+	IPv4_address 192.168.1.200 # virtual IP 2
 }
 
 #
