@@ -2,7 +2,7 @@
 # Synchronizer settings
 #
 Sync {
-	Mode NACK {
+	Mode FTFW {
                 #
 		# Size of the buffer that hold destroy messages for 
 		# possible resends (in bytes)
