@@ -1,1 +1,0 @@
-This directory contains the files for the NACK based protocol
