@@ -1,1 +1,0 @@
-This directory contains the files for the PERSISTENT based protocol
