@@ -46,7 +46,7 @@ static const char usage_client_commands[] =
 	"  -k, kill conntrack daemon\n"
 	"  -s, dump statistics\n"
 	"  -R, resync with kernel conntrack table\n"
-	"  -n, request resync with other node (only NACK mode)\n"
+	"  -n, request resync with other node (only FT-FW mode)\n"
 	"  -x, dump cache in XML format (requires -i or -e)";
 
 static const char usage_options[] =
